add welcome and preferences dialogs